<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">REFLEcT</string>
	<string name="user">User</string>
	<string name="password">Password</string>
	<string name="enable_password">Use password</string>
	<string name="host">Host</string>
	<string name="port">Port</string>
	<string name="default_port">22</string>
	<string name="enable_auth">Use decryption</string>
	<string name="auth">RSA private key file</string>
	<string name="enable_passphrase">Use passphrase</string>
	<string name="passphrase">Passphrase</string>
	<string name="known_hosts">known_hosts file</string>
	<string name="save_config">Remember configuration</string>
	<string name="save_passwords">Include passwords</string>
	<string name="storage_permission">Storage permission</string>
	<string name="ok">OK</string>
	<string name="storage_permission_message">You need to grant permission to read the storage for the application to work</string>
	<string name="connect">Connect</string>
	<string name="cancel">Cancel</string>
	<string name="edit_file">Edit file</string>
	<string name="remote_file_path">Path to remote file</string>
	<string name="nothing_entered">Nothing was entered</string>
	<string name="no_editor_installed">There is no editor installed</string>
	<string name="sftp_error_pull_file">Failed to pull the file from the server</string>
	<string name="sftp_error_create_parent_dir">Failed to create the file\'s parent directory on the server</string>
	<string name="sftp_error_push_file">Failed to push the file to the server</string>
	<string name="sftp_error_send_file">Failed to send the file to the server</string>
	<string name="file_pushed">The file was pushed successfully</string>
	<string name="file_pulled">The file was pulled successfully</string>
	<string name="connection_failed">Connection failed: %1$s</string>
	<string name="do_you_want_to_retry">Do you want to retry?</string>
	<string name="sftp_error">SFTP error %1$s: %2$s</string>
	<string name="sftp_error_code_0">OK</string>
	<string name="sftp_error_code_1">EOF</string>
	<string name="sftp_error_code_2">No such file</string>
	<string name="sftp_error_code_3">Permission denied</string>
	<string name="sftp_error_code_4">Failure</string>
	<string name="sftp_error_code_5">Bad message</string>
	<string name="sftp_error_code_6">No connection</string>
	<string name="sftp_error_code_7">Connection lost</string>
	<string name="sftp_error_code_8">Operation unsupported</string>
	<string name="sftp_error_code_9">Invalid handle</string>
	<string name="sftp_error_code_10">No such path</string>
	<string name="sftp_error_code_11">File already exists</string>
	<string name="sftp_error_code_12">Write protect</string>
	<string name="sftp_error_code_13">No media</string>
	<string name="sftp_error_code_14">No space on file-system</string>
	<string name="sftp_error_code_15">Quota exceeded</string>
	<string name="sftp_error_code_16">Unknown principal</string>
	<string name="sftp_error_code_17">Lock conflict</string>
	<string name="sftp_error_code_18">Directory not empty</string>
	<string name="sftp_error_code_19">Not a directory</string>
	<string name="sftp_error_code_20">Invalid filename</string>
	<string name="sftp_error_code_21">Link loop</string>
	<string name="sftp_error_code_22">Cannot delete</string>
	<string name="sftp_error_code_23">Invalid parameter</string>
	<string name="sftp_error_code_24">File is a directory</string>
	<string name="sftp_error_code_25">Range lock conflict</string>
	<string name="sftp_error_code_26">Range lock refused</string>
	<string name="sftp_error_code_27">Delete pending</string>
	<string name="sftp_error_code_28">File corrupt</string>
	<string name="sftp_error_code_29">Owner invalid</string>
	<string name="sftp_error_code_30">Group invalid</string>
	<string name="sftp_error_code_31">No matching byte range loc</string>
	<string name="unknown_file_name">Unknown filename</string>
	<string name="unknown_project_name">Unknown project name</string>
	<string name="error_open_file">File could not be opened</string>
	<string name="error_export_file">File could not be exported</string>
	<string name="open_with">Open with</string>
	<string name="pull">Pull</string>
	<string name="push">Push</string>
	<string name="close">Close</string>
	<string name="error_close_file">File could not be closed</string>
	<string name="export">Export</string>
	<string name="edit">Edit</string>
	<string name="add_shortcut">Add shortcut</string>
	<string name="remove">Remove</string>
	<string name="description">Description</string>
	<string name="command">Command</string>
	<string name="file_name">File name</string>
	<string name="file_exists">File exists already</string>
	<string name="do_you_want_to_overwrite">Do you want to overwrite the file %1$s?</string>
	<string name="new_project">New project</string>
	<string name="edit_project">Edit project</string>
	<string name="open_project">Open project</string>
	<string name="new_directory">New directory</string>
	<string name="remote_directory_path">Path to remote directory</string>
	<string name="title">Title</string>
	<string name="error_open_project">Project could not be opened</string>
	<string name="error_edit_project">Prpject could not be edited</string>
	<string name="error_close_project">Project could not be closed</string>
	<string name="error_exec_command">The command could not be executed</string>
	<string name="error_add_shortcut">Shortcut could not be added</string>
	<string name="projects">Projects</string>
	<string name="edit_shortcut">Edit shortcut</string>
	<string name="remove_shortcut">Remove shortcut</string>
	<string name="error_edit_shortcut">Shortcut could not be edited</string>
	<string name="error_move_shortcut">Shortcut could not be moved</string>
	<string name="error_remove_shortcut">Shortcut could not be removed</string>
	<string name="shortcuts_">Shortcuts…</string>
	<string name="no_such_file">The file does not exist</string>
	<string name="do_you_really_want_to_close_file">Are you sure that you want to close this file?</string>
	<string name="do_you_really_want_to_remove_shortcut">Are you sure that you want to remove this shortcut?</string>
	<string name="do_you_really_want_to_remove_project">Are you sure that you want to remove this project?</string>
	<string name="do_you_want_to_create_it">Do you want to create it?</string>
	<string name="copied_to_clipboard">Copied to clipboard</string>
	
</resources>
