<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:layout_width="match_parent"
				android:layout_height="match_parent">

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_above="@+id/ctrls">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:orientation="vertical"
			android:padding="@dimen/group_container">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/group"
				android:orientation="vertical">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center"
					android:orientation="horizontal">

					<android.support.design.widget.TextInputLayout
						android:layout_width="0px"
						android:layout_height="wrap_content"
						android:layout_weight="2">

						<EditText
							android:id="@+id/host"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:hint="@string/host"
							android:inputType="textUri"
							android:maxLines="1"
							android:scrollHorizontally="true"
							android:singleLine="true"/>

					</android.support.design.widget.TextInputLayout>

					<android.support.design.widget.TextInputLayout
						android:layout_width="0px"
						android:layout_height="wrap_content"
						android:layout_weight="1">

						<EditText
							android:id="@+id/port"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:hint="@string/port"
							android:inputType="number"
							android:maxLines="1"
							android:scrollHorizontally="true"
							android:singleLine="true"
							android:text="@string/default_port"/>

					</android.support.design.widget.TextInputLayout>

				</LinearLayout>

			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/group"
				android:orientation="vertical">

				<android.support.design.widget.TextInputLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<EditText
						android:id="@+id/user"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:hint="@string/user"
						android:inputType="text"
						android:maxLines="1"
						android:scrollHorizontally="true"
						android:singleLine="true"/>

				</android.support.design.widget.TextInputLayout>

			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/group"
				android:orientation="vertical">

				<CheckBox
					android:id="@+id/password_enabled"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:checked="true"
					android:text="@string/enable_password"/>

				<android.support.design.widget.TextInputLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<EditText
						android:id="@+id/password"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:hint="@string/password"
						android:inputType="textPassword"
						android:maxLines="1"
						android:scrollHorizontally="true"
						android:singleLine="true"/>

				</android.support.design.widget.TextInputLayout>

			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/group"
				android:orientation="vertical">

				<CheckBox
					android:id="@+id/auth_enabled"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:checked="false"
					android:text="@string/enable_auth"/>

				<android.support.design.widget.TextInputLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<EditText
						android:id="@+id/auth"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:hint="@string/auth"
						android:inputType="textUri"
						android:maxLines="1"
						android:scrollHorizontally="true"
						android:singleLine="true"/>

				</android.support.design.widget.TextInputLayout>

				<CheckBox
					android:id="@+id/passphrase_enabled"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:checked="false"
					android:text="@string/enable_passphrase"/>


				<android.support.design.widget.TextInputLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<EditText
						android:id="@+id/passphrase"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:hint="@string/passphrase"
						android:inputType="textPassword"
						android:maxLines="1"
						android:scrollHorizontally="true"
						android:singleLine="true"/>

				</android.support.design.widget.TextInputLayout>

				<android.support.design.widget.TextInputLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<EditText
						android:id="@+id/known_hosts"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:hint="@string/known_hosts"
						android:inputType="textUri"
						android:maxLines="1"
						android:scrollHorizontally="true"
						android:singleLine="true"/>

				</android.support.design.widget.TextInputLayout>

			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/group"
				android:orientation="vertical">

				<CheckBox
					android:id="@+id/save_config"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:checked="true"
					android:text="@string/save_config"/>

				<CheckBox
					android:id="@+id/save_passwords"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:checked="true"
					android:text="@string/save_passwords"/>

			</LinearLayout>

		</LinearLayout>

	</ScrollView>

	<LinearLayout
		android:id="@+id/ctrls"
		style="?android:buttonBarStyle"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:background="#11000000"
		android:gravity="center"
		android:orientation="horizontal">

		<Button
			android:id="@+id/cancel"
			style="?android:buttonBarButtonStyle"
			android:layout_width="0px"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:onClick="cancel"
			android:text="@string/cancel"/>

		<Button
			android:id="@+id/connect"
			style="?android:buttonBarButtonStyle"
			android:layout_width="0px"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:onClick="connect"
			android:text="@string/connect"/>

	</LinearLayout>

</RelativeLayout>
